@@ -132,6 +132,7 @@ BEGIN
         MENUITEM "Perform Auto&type",           ID_MENUITEM_AUTOTYPE, MFT_STRING
         MENUITEM "Create &Shortcut",            ID_MENUITEM_CREATESHORTCUT, MFT_STRING
         MENUITEM "&Go to Base entry",           ID_MENUITEM_GOTOBASEENTRY, MFT_STRING
+        MENUITEM "&Edit Base entry",            ID_MENUITEM_EDITBASEENTRY, MFT_STRING
     END
     POPUP "&View", ID_VIEWMENU, MFT_STRING
     BEGIN
@@ -215,6 +216,7 @@ BEGIN
         MENUITEM "Delete Entry",                ID_MENUITEM_DELETEENTRY
         MENUITEM "Create &Shortcut",            ID_MENUITEM_CREATESHORTCUT
         MENUITEM "&Go to Base entry",           ID_MENUITEM_GOTOBASEENTRY
+        MENUITEM "&Edit Base entry",            ID_MENUITEM_EDITBASEENTRY
     END
 END
 
@@ -362,6 +364,7 @@ BEGIN
     ID_MENUITEM_EDIT             "\nEdit an Entry"
     ID_MENUITEM_DELETEENTRY      "\nDelete an Entry"
     ID_MENUITEM_GOTOBASEENTRY    "\nGo to Base entry"
+    ID_MENUITEM_EDITBASEENTRY    "\nEdit Base entry"
     ID_MENUITEM_EXPANDALL        "\nExpand All"
     ID_MENUITEM_COLLAPSEALL      "\nCollapse All"
     ID_MENUITEM_OPTIONS          "\nOptions"
